--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
                         <p>2</p>
                         <p>3</p>
                     </div>
-                    <li><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li> 
-                    <li><i class="fa-solid fa-list"></i>Composez votre menu</li>
-                    <li><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
+                    <ul>
+                        <li><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li> 
+                        <li><i class="fa-solid fa-list"></i>Composez votre menu</li>
+                        <li><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
+                    </ul>
                 </div>
         </div>
         <div class="Back">
@@ -78,17 +80,19 @@
                         <i class="fa-solid fa-heart coeur2"></i>
                     </div>
                 </div>
-                <div class="carte">
-                    <img src="images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
-                    <div class="txt-heart">
-                        <div class="txt">
-                            <h3>À la francaise</h3>
-                            <p>Cité Rouge</p>
+                <a href="page1.html">
+                    <div class="carte">
+                        <img src="images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                        <div class="txt-heart">
+                            <div class="txt">
+                                <h3>À la francaise</h3>
+                                <p>Cité Rouge</p>
+                            </div>
+                            <i class="fa-regular fa-heart coeur3"></i>
+                            <i class="fa-solid fa-heart coeur3"></i>
                         </div>
-                        <i class="fa-regular fa-heart coeur3"></i>
-                        <i class="fa-solid fa-heart coeur3"></i>
                     </div>
-                </div>
+                </a>
                 <div class="carte">
                     <img src="images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                     <div class="txt-heart">
