--- a/page1.html
+++ b/page1.html
@@ -15,7 +15,7 @@
     
     <header>
         <div class="arrow">
-            <i class="fa-solid fa-arrow-left"></i>
+            <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
         <img src="images\logo\ohmyfood.png" alt="">
     </header>
@@ -39,34 +39,40 @@
                     </div>
                 <div class="vignette">
                     <div class="V1">
-                        <div class="vtexte">
-                            <h2>Tartare de poulpe acidulé</h2>
-                            <h4>Aux zestes d'orange</h4>
+                        <div class="V2">
+                            <div class="vtexte">
+                                <h2>Tartare de poulpe acidulé</h2>
+                                <h4>Aux zestes d'orange</h4>
+                            </div>
+                            <div class="droite">
+                                <strong>25€</strong>
+                            </div>
                         </div>
-                        <div class="droite">
-                            <strong>25€</strong>
-                            <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
-                        </div>
+                        <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="V1">
-                        <div class="vtexte">
-                            <h2>Velouté de légumes d'antan</h2>
-                            <h4>Carotte, panais, topinambour</h4>
+                        <div class="V2">
+                            <div class="vtexte">
+                                <h2>Velouté de légumes d'antan</h2>
+                                <h4>Carotte, panais, topinambour</h4>
+                            </div>
+                            <div class="droite">
+                                <strong>35€</strong>
+                            </div>
                         </div>
-                        <div class="droite">
-                            <strong>35€</strong>
-                            <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
-                        </div>
+                        <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="V1">
-                        <div class="vtexte">
-                            <h2>Soupe à l'oignon</h2>
-                            <h4>Revisitée</h4>
+                        <div class="V2">
+                            <div class="vtexte">
+                                <h2>Soupe à l'oignon</h2>
+                                <h4>Revisitée</h4>
+                            </div>
+                            <div class="droite">
+                                <strong>20€</strong>
+                            </div>
                         </div>
-                        <div class="droite">
-                            <strong>20€</strong>
-                            <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
-                        </div>
+                        <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                     </div>
                 </div>
             </div>
@@ -76,34 +82,40 @@
                 </div>
                 <div class="vignette">
                     <div class="V1">
-                        <div class="vtexte">
-                            <h2>Coquilles Saint-Jacques</h2>
-                            <h4>Accompagnées d'une purée de panais</h4>
+                        <div class="V2">
+                            <div class="vtexte">
+                                <h2>Coquilles Saint-Jacques</h2>
+                                <h4>Accompagnées d'une purée de panais</h4>
+                            </div>
+                            <div class="droite">
+                                <strong>40€</strong>
+                            </div>
                         </div>
-                        <div class="droite">
-                            <strong>40€</strong>
-                            <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
-                        </div>
+                        <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="V1">
-                        <div class="vtexte">
-                            <h2>Magret de canard</h2>
-                            <h4>Et parmentier de pommes de terre</h4>
+                        <div class="V2">
+                            <div class="vtexte">
+                                <h2>Magret de canard</h2>
+                                <h4>Et parmentier de pommes de terre</h4>
+                            </div>
+                            <div class="droite">
+                                <strong>35€</strong>
+                            </div>
                         </div>
-                        <div class="droite">
-                            <strong>35€</strong>
-                            <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
-                        </div>
+                        <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="V1">
-                        <div class="vtexte">
-                            <h2>Pigeonneau d’Ille-et-Vilaine</h2>
-                            <h4>Sur son lit de gnocchis aux légumes</h4>
+                        <div class="V2">
+                            <div class="vtexte">
+                                <h2>Pigeonneau d’Ille-et-Vilaine</h2>
+                                <h4>Sur son lit de gnocchis aux légumes</h4>
+                            </div>
+                            <div class="droite">
+                                <strong>44€</strong>
+                            </div>
                         </div>
-                        <div class="droite">
-                            <strong>44€</strong>
-                            <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
-                        </div>
+                        <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                     </div>
                 </div>
             </div>
@@ -113,34 +125,40 @@
                 </div>
                 <div class="vignette">
                     <div class="V1">
-                        <div class="vtexte">
-                            <h2>Pétales de violettes glacés</h2>
-                            <h4>Et purée de noisettes</h4>
+                        <div class="V2">
+                            <div class="vtexte">
+                                <h2>Pétales de violettes glacés</h2>
+                                <h4>Et purée de noisettes</h4>
+                            </div>
+                            <div class="droite">
+                                <strong>18€</strong>
+                            </div>
                         </div>
-                        <div class="droite">
-                            <strong>18€</strong>
-                            <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
-                        </div>
+                        <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="V1">
-                        <div class="vtexte">
-                            <h2>Fondant au chocolat</h2>
-                            <h4>Revisité</h4>
+                        <div class="V2">
+                            <div class="vtexte">
+                                <h2>Fondant au chocolat</h2>
+                                <h4>Revisité</h4>
+                            </div>
+                            <div class="droite">
+                                <strong>22€</strong>
+                            </div>
                         </div>
-                        <div class="droite">
-                            <strong>22€</strong>
-                            <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
-                        </div>
+                        <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="V1">
-                        <div class="vtexte">
-                            <h2>Millefeuille croustillant</h2>
-                            <h4>Myrtilles et pâte d’amande</h4>
+                        <div class="V2">
+                            <div class="vtexte">
+                                <h2>Millefeuille croustillant</h2>
+                                <h4>Myrtilles et pâte d’amande</h4>
+                            </div>
+                            <div class="droite">
+                                <strong>23€</strong>
+                            </div>
                         </div>
-                        <div class="droite">
-                            <strong>23€</strong>
-                            <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
-                        </div>
+                        <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
                     </div>
                 </div>
             </div>
