--- a/page2.html
+++ b/page2.html
@@ -21,12 +21,12 @@
     </header>
     
     <div class="background">
-        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
     </div>
 
     <div class="page">
         <div class="haut">
-            <p>À la française</p>
+            <p>Le déclice des sens</p>
             <div class="coeur">
                 <i class="fa-regular fa-heart coeur2"></i>
                 <i class="fa-solid fa-heart coeur2"></i>
@@ -41,8 +41,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Tartare de poulpe acidulé</h2>
-                                <h4>Aux zestes d'orange</h4>
+                                <h2>Tartare de thon</h2>
+                                <h4>Assaisonné au yuzu</h4>
                             </div>
                             <div class="droite">
                                 <strong>25€</strong>
@@ -53,8 +53,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Velouté de légumes d'antan</h2>
-                                <h4>Carotte, panais, topinambour</h4>
+                                <h2>Bouchée de homard croustillant</h2>
+                                <h4>Et sa farandole de petits légumes</h4>
                             </div>
                             <div class="droite">
                                 <strong>35€</strong>
@@ -65,8 +65,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Soupe à l'oignon</h2>
-                                <h4>Revisitée</h4>
+                                <h2>Velouté de cèpes</h2>
+                                <h4>Aux truffes</h4>
                             </div>
                             <div class="droite">
                                 <strong>20€</strong>
@@ -84,8 +84,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Coquilles Saint-Jacques</h2>
-                                <h4>Accompagnées d'une purée de panais</h4>
+                                <h2>Poulet rôti aux herbes de Provence</h2>
+                                <h4>Et sa crème de truffe</h4>
                             </div>
                             <div class="droite">
                                 <strong>40€</strong>
@@ -96,8 +96,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Magret de canard</h2>
-                                <h4>Et parmentier de pommes de terre</h4>
+                                <h2>Langouste rôtie</h2>
+                                <h4>Et ses légumes de saison</h4>
                             </div>
                             <div class="droite">
                                 <strong>35€</strong>
@@ -108,8 +108,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Pigeonneau d’Ille-et-Vilaine</h2>
-                                <h4>Sur son lit de gnocchis aux légumes</h4>
+                                <h2>Côte de boeuf Angus</h2>
+                                <h4>Et sa purée de panais</h4>
                             </div>
                             <div class="droite">
                                 <strong>44€</strong>
@@ -127,8 +127,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Pétales de violettes glacés</h2>
-                                <h4>Et purée de noisettes</h4>
+                                <h2>Farandole de desserts</h2>
+                                <h4>Du chef</h4>
                             </div>
                             <div class="droite">
                                 <strong>18€</strong>
@@ -139,8 +139,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Fondant au chocolat</h2>
-                                <h4>Revisité</h4>
+                                <h2>Crème brulée</h2>
+                                <h4>Revisitée</h4>
                             </div>
                             <div class="droite">
                                 <strong>22€</strong>
@@ -151,8 +151,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Millefeuille croustillant</h2>
-                                <h4>Myrtilles et pâte d’amande</h4>
+                                <h2>Tiramisu</h2>
+                                <h4> À la noisette</h4>
                             </div>
                             <div class="droite">
                                 <strong>23€</strong>
