--- a/page3.html
+++ b/page3.html
@@ -21,12 +21,12 @@
     </header>
     
     <div class="background">
-        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
     </div>
 
     <div class="page">
         <div class="haut">
-            <p>À la française</p>
+            <p>La note enchantée</p>
             <div class="coeur">
                 <i class="fa-regular fa-heart coeur2"></i>
                 <i class="fa-solid fa-heart coeur2"></i>
@@ -41,8 +41,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Tartare de poulpe acidulé</h2>
-                                <h4>Aux zestes d'orange</h4>
+                                <h2>Ravioles de foie gras</h2>
+                                <h4>Accompagnés de leur crème à la truffe</h4>
                             </div>
                             <div class="droite">
                                 <strong>25€</strong>
@@ -53,8 +53,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Velouté de légumes d'antan</h2>
-                                <h4>Carotte, panais, topinambour</h4>
+                                <h2>Caviar osciètre</h2>
+                                <h4>Sur blini à la farine de blé noir</h4>
                             </div>
                             <div class="droite">
                                 <strong>35€</strong>
@@ -65,11 +65,23 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Soupe à l'oignon</h2>
-                                <h4>Revisitée</h4>
+                                <h2>Homard et espuma de potiron</h2>
+                                <h4>Mariné aux zestes d'orange</h4>
                             </div>
                             <div class="droite">
                                 <strong>20€</strong>
+                            </div>
+                        </div>
+                        <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
+                    </div>
+                    <div class="V1">
+                        <div class="V2">
+                            <div class="vtexte">
+                                <h2>Foie gras de canard cuit entier</h2>
+                                <h4>Confiture de figue et pain toasté</h4>
+                            </div>
+                            <div class="droite">
+                                <strong>35€</strong>
                             </div>
                         </div>
                         <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
@@ -84,8 +96,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Coquilles Saint-Jacques</h2>
-                                <h4>Accompagnées d'une purée de panais</h4>
+                                <h2>Noix de coquilles Saint-Jacques</h2>
+                                <h4>Sur lit de purée de céleri-rave</h4>
                             </div>
                             <div class="droite">
                                 <strong>40€</strong>
@@ -96,8 +108,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Magret de canard</h2>
-                                <h4>Et parmentier de pommes de terre</h4>
+                                <h2>Langoustine poêlée</h2>
+                                <h4>Purée de patate douce</h4>
                             </div>
                             <div class="droite">
                                 <strong>35€</strong>
@@ -108,8 +120,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Pigeonneau d’Ille-et-Vilaine</h2>
-                                <h4>Sur son lit de gnocchis aux légumes</h4>
+                                <h2>Mijoté de queue de boeuf</h2>
+                                <h4>Et riz sauvage aux zestes de citron</h4>
                             </div>
                             <div class="droite">
                                 <strong>44€</strong>
@@ -127,8 +139,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Pétales de violettes glacés</h2>
-                                <h4>Et purée de noisettes</h4>
+                                <h2>Macaron noisette et chocolat</h2>
+                                <h4>Glace au caramel brun et sel de Guérande</h4>
                             </div>
                             <div class="droite">
                                 <strong>18€</strong>
@@ -139,8 +151,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Fondant au chocolat</h2>
-                                <h4>Revisité</h4>
+                                <h2>Baba au rhum revisité</h2>
+                                <h4>Avec son coulis de citron</h4>
                             </div>
                             <div class="droite">
                                 <strong>22€</strong>
@@ -151,8 +163,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Millefeuille croustillant</h2>
-                                <h4>Myrtilles et pâte d’amande</h4>
+                                <h2>Tarte au citron meringuée</h2>
+                                <h4>Déstructurée</h4>
                             </div>
                             <div class="droite">
                                 <strong>23€</strong>
