--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Reneuve_Mehdi_Projet_3/css/page1.css">
+    <link rel="stylesheet" href="page1.css">
     <script src="https://kit.fontawesome.com/39de2a3117.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,16 +17,16 @@
         <div class="arrow">
             <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
-        <img src="/Reneuve_Mehdi_Projet_3/images/logo/ohmyfood.png" alt="">
+        <img src="/images/logo/ohmyfood.png" alt="">
     </header>
     
     <div class="background">
-        <img src="/Reneuve_Mehdi_Projet_3/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+        <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
     </div>
 
     <div class="page">
         <div class="haut">
-            <p>La palette du goût</p>
+            <p>Le déclice des sens</p>
             <div class="coeur">
                 <i class="fa-regular fa-heart coeur2"></i>
                 <i class="fa-solid fa-heart coeur2"></i>
@@ -41,8 +41,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Fricassée d'escargot</h2>
-                                <h4>Au piment d'Espelette</h4>
+                                <h2>Tartare de thon</h2>
+                                <h4>Assaisonné au yuzu</h4>
                             </div>
                             <div class="droite">
                                 <strong>25€</strong>
@@ -53,8 +53,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Foie gras de canard mi-cuit</h2>
-                                <h4>Et ses copeaux de truffe noire</h4>
+                                <h2>Bouchée de homard croustillant</h2>
+                                <h4>Et sa farandole de petits légumes</h4>
                             </div>
                             <div class="droite">
                                 <strong>35€</strong>
@@ -65,8 +65,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Oeuf au plat</h2>
-                                <h4>Assaisonné à la truffe sur lit de caviar</h4>
+                                <h2>Velouté de cèpes</h2>
+                                <h4>Aux truffes</h4>
                             </div>
                             <div class="droite">
                                 <strong>20€</strong>
@@ -84,8 +84,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Filet de boeuf aux herbes</h2>
-                                <h4>Accompagné de sa ribambelle de légumes</h4>
+                                <h2>Poulet rôti aux herbes de Provence</h2>
+                                <h4>Et sa crème de truffe</h4>
                             </div>
                             <div class="droite">
                                 <strong>40€</strong>
@@ -96,8 +96,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Parmentier de queue de boeuf</h2>
-                                <h4>À la truffe noire sur sa purée de panais</h4>
+                                <h2>Langouste rôtie</h2>
+                                <h4>Et ses légumes de saison</h4>
                             </div>
                             <div class="droite">
                                 <strong>35€</strong>
@@ -108,8 +108,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Filet de turbot</h2>
-                                <h4>Aux agrumes</h4>
+                                <h2>Côte de boeuf Angus</h2>
+                                <h4>Et sa purée de panais</h4>
                             </div>
                             <div class="droite">
                                 <strong>44€</strong>
@@ -127,8 +127,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Paris-Brest</h2>
-                                <h4>Revisité</h4>
+                                <h2>Farandole de desserts</h2>
+                                <h4>Du chef</h4>
                             </div>
                             <div class="droite">
                                 <strong>18€</strong>
@@ -139,8 +139,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Macaron au chocolat d'exception</h2>
-                                <h4>Et glace à la vanille de Madagascar</h4>
+                                <h2>Crème brulée</h2>
+                                <h4>Revisitée</h4>
                             </div>
                             <div class="droite">
                                 <strong>22€</strong>
@@ -151,8 +151,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Mousse au chocolat</h2>
-                                <h4>Au piment d'Espelette et à la truffe noire</h4>
+                                <h2>Tiramisu</h2>
+                                <h4> À la noisette</h4>
                             </div>
                             <div class="droite">
                                 <strong>23€</strong>
