--- a/page1.html
+++ b/page1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Reneuve_Mehdi_Projet_3/css/page1.css">
+    <link rel="stylesheet" href="page1.css">
     <script src="https://kit.fontawesome.com/39de2a3117.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,16 +17,16 @@
         <div class="arrow">
             <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
-        <img src="/Reneuve_Mehdi_Projet_3/images/logo/ohmyfood.png" alt="">
+        <img src="images\logo\ohmyfood.png" alt="">
     </header>
     
     <div class="background">
-        <img src="/Reneuve_Mehdi_Projet_3/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+        <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
     </div>
 
     <div class="page">
         <div class="haut">
-            <p>La note enchantée</p>
+            <p>À la française</p>
             <div class="coeur">
                 <i class="fa-regular fa-heart coeur2"></i>
                 <i class="fa-solid fa-heart coeur2"></i>
@@ -41,8 +41,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Ravioles de foie gras</h2>
-                                <h4>Accompagnés de leur crème à la truffe</h4>
+                                <h2>Tartare de poulpe acidulé</h2>
+                                <h4>Aux zestes d'orange</h4>
                             </div>
                             <div class="droite">
                                 <strong>25€</strong>
@@ -53,8 +53,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Caviar osciètre</h2>
-                                <h4>Sur blini à la farine de blé noir</h4>
+                                <h2>Velouté de légumes d'antan</h2>
+                                <h4>Carotte, panais, topinambour</h4>
                             </div>
                             <div class="droite">
                                 <strong>35€</strong>
@@ -65,23 +65,11 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Homard et espuma de potiron</h2>
-                                <h4>Mariné aux zestes d'orange</h4>
+                                <h2>Soupe à l'oignon</h2>
+                                <h4>Revisitée</h4>
                             </div>
                             <div class="droite">
                                 <strong>20€</strong>
-                            </div>
-                        </div>
-                        <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
-                    </div>
-                    <div class="V1">
-                        <div class="V2">
-                            <div class="vtexte">
-                                <h2>Foie gras de canard cuit entier</h2>
-                                <h4>Confiture de figue et pain toasté</h4>
-                            </div>
-                            <div class="droite">
-                                <strong>35€</strong>
                             </div>
                         </div>
                         <div class="check"><i class="fa-sharp fa-solid fa-circle-check"></i></div>
@@ -96,8 +84,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Noix de coquilles Saint-Jacques</h2>
-                                <h4>Sur lit de purée de céleri-rave</h4>
+                                <h2>Coquilles Saint-Jacques</h2>
+                                <h4>Accompagnées d'une purée de panais</h4>
                             </div>
                             <div class="droite">
                                 <strong>40€</strong>
@@ -108,8 +96,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Langoustine poêlée</h2>
-                                <h4>Purée de patate douce</h4>
+                                <h2>Magret de canard</h2>
+                                <h4>Et parmentier de pommes de terre</h4>
                             </div>
                             <div class="droite">
                                 <strong>35€</strong>
@@ -120,8 +108,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Mijoté de queue de boeuf</h2>
-                                <h4>Et riz sauvage aux zestes de citron</h4>
+                                <h2>Pigeonneau d’Ille-et-Vilaine</h2>
+                                <h4>Sur son lit de gnocchis aux légumes</h4>
                             </div>
                             <div class="droite">
                                 <strong>44€</strong>
@@ -139,8 +127,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Macaron noisette et chocolat</h2>
-                                <h4>Glace au caramel brun et sel de Guérande</h4>
+                                <h2>Pétales de violettes glacés</h2>
+                                <h4>Et purée de noisettes</h4>
                             </div>
                             <div class="droite">
                                 <strong>18€</strong>
@@ -151,8 +139,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Baba au rhum revisité</h2>
-                                <h4>Avec son coulis de citron</h4>
+                                <h2>Fondant au chocolat</h2>
+                                <h4>Revisité</h4>
                             </div>
                             <div class="droite">
                                 <strong>22€</strong>
@@ -163,8 +151,8 @@
                     <div class="V1">
                         <div class="V2">
                             <div class="vtexte">
-                                <h2>Tarte au citron meringuée</h2>
-                                <h4>Déstructurée</h4>
+                                <h2>Millefeuille croustillant</h2>
+                                <h4>Myrtilles et pâte d’amande</h4>
                             </div>
                             <div class="droite">
                                 <strong>23€</strong>
