--- a/page2.html
+++ b/page2.html
@@ -17,11 +17,11 @@
         <div class="arrow">
             <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
-        <img src="/images/logo/ohmyfood.png" alt="">
+        <img src="images/logo/ohmyfood.png" alt="">
     </header>
     
     <div class="background">
-        <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
     </div>
 
     <div class="page">
