--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <i class="fas fa-circle-notch fa-3x fa-spin"></i>
     </div>
     <header>
-        <img src="/images/logo/ohmyfood.png" alt="">
+        <img src="images/logo/ohmyfood.png" alt="">
     </header>
 
     <div class="localisation">
@@ -72,7 +72,7 @@
                 <a href="page3.html">
                     <div class="carte">
                         <div class="new">Nouveau</div>
-                        <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                         <div class="txt-heart">
                             <div class="txt">
                                 <h3>La note enchantée</h3>
@@ -85,7 +85,7 @@
                 </a>
                 <a href="page1.html">
                     <div class="carte">
-                        <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                         <div class="txt-heart">
                             <div class="txt">
                                 <h3>À la francaise</h3>
@@ -98,7 +98,7 @@
                 </a>
                 <a href="page2.html">
                     <div class="carte">
-                        <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                         <div class="txt-heart">
                             <div class="txt">
                                 <h3>La délice des sens</h3>
