--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     
                         <div class="txt-heart">
                             <div class="txt">
-                                <h3>La palette du gout</h3>
+                                    <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p> 
                             </div>
                             <i class="fa-regular fa-heart coeur1"></i>
@@ -88,7 +88,7 @@
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                         <div class="txt-heart">
                             <div class="txt">
-                                <h3>À la francaise</h3>
+                                <h3>À la française</h3>
                                 <p>Cité Rouge</p>
                             </div>
                             <i class="fa-regular fa-heart coeur3"></i>
@@ -101,7 +101,7 @@
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                         <div class="txt-heart">
                             <div class="txt">
-                                <h3>La délice des sens</h3>
+                                <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </div>
                             <i class="fa-regular fa-heart coeur4"></i>
